fix: font-stretching methods removed (wip)

--- a/source/eccentrictouch-core/typography/typography.scss
+++ b/source/eccentrictouch-core/typography/typography.scss
@@ -202,36 +202,3 @@ $text-align-properties-list: (
 }
 
 
-// font-stretch: generating a set of class methods to manage and change font-stretchings
-// keyword based class-methods for font-stretching (font-stretch/keyword)
-$font-stretch-properties-list: (
-	"ultra-condensed": ultra-condensed,
-	"extra-condensed": extra-condensed,
-	"condensed": condensed,
-	"semi-condensed": semi-condensed,
-	"normal": normal,
-	"semi-expanded": semi-expanded,
-	"expanded": expanded,
-	"extra-expanded": extra-expanded,
-	"ultra-expanded": ultra-expanded,
-	"inherit": inherit,
-	"initial": initial,
-	"revert": revert,
-	"unset": unset
-);
-
-@each $font-stretch-title, $font-stretch-value in $font-stretch-properties-list {
-	.font-stretch-#{$font-stretch-title} {
-		font-stretch: #{$font-stretch-value};
-	}
-}
-
-// value based font-stretch properties (font-stretch/values)
-// generating values from 0% to 100%
-@for $font-stretch-percentage-value from 0 through 100 {
-	.font-stretch-#{$font-stretch-percentage-value} {
-		font-stretch: #{$font-stretch-percentage-value * 1%};
-	}
-}
-
-
